--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
   "name": "lplabs/wp-composer-autoloader",
   "description": "Include the Composer autoloader",
   "type": "wordpress-muplugin",
-  "license": "proprietary",
-  "keywords": [ "WordPress", "Composer", "autoload", "autoloader", "must-use", "Lonely Planet", "LP Labs" ],
+  "license": "MIT",
+  "keywords": [ "WordPress", "Composer", "autoload", "autoloader", "must-use", "LonelyPlanet", "LPLabs" ],
   "authors": [
     {
       "name": "Eric King",
@@ -17,9 +17,9 @@
     "issues": "https://github.com/LPLabs/wp-composer-autoloader/issues"
   },
   "extra": {
-    "wordpress-muplugin-entry": "_composer-autoloader.php"
+    "wordpress-muplugin-entry": "src/_composer-autoloader.php"
   },
   "require": {
-    "composer/installers": "^1.0"
+    "lplabs/wordpress-muplugin-installer": "^2.0"
   }
 }
